--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -22,6 +22,8 @@
         <h2>Выберите мороженое</h2>
           {{ icecreams|safe }}
         <br>
+        <h2>Задайте вопрос</h2>
+        <input type="text" id="question" name="question" required size="40"><br>
         <input type="submit" value="Угостить">
       </form>
 
