--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -15,7 +15,7 @@
         <input type="text" id="question" name="question" required size="40">
         <br>
         <br>
-        <input type="submit" value="Угостить">
+        <input type="submit" value="Узнать">
       </form>
 
   </body>
