--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -9,6 +9,7 @@
        <br>
       <p>
         {{ question }}
+        {{ answer }}
       </p>
       <form action="/" method="post">
         <h2>Задайте вопрос</h2>
