--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -9,11 +9,22 @@
        <br>
       <p>
         {{ question }}
+        <br>
+        <p>Ответ:</p>
         {{ answer }}
+        <br>
+        <p>Вся инфа о танке:</p>
+        {{ tank_info }}
       </p>
       <form action="/" method="post">
         <h2>Задайте вопрос</h2>
-        <input type="text" id="question" name="question" required size="40">
+        <p>Выберите танк:</p>
+          <p><input list="character" id="tank_name" name="tank_name" required> 
+           <datalist id="character">
+            {{ all_tanks_html|safe }}
+           </datalist></p>
+        <p>Задайте ваш вопрос:</p>
+        <input type="text" id="question" name="question" required size="80">
         <br>
         <br>
         <input type="submit" value="Узнать">
